# pytorch_bayesian_unet_inference_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dump_model.py  infer-app.cpp
